@@ -1,5 +1,10 @@
+-----------------Release date: 21/09/2013-------------------------	
+	+ Add "SYSTEM_ACTIVATION_STATUS" enum
+	+ Add "UNKNOWN" member into "DEVICE_NAME" enum
+	+ Modify "SYSTEM_STATUS" message: change "status1" argument to "system_activated" 
+
 -----------------Release date: 20/09/2013-------------------------	
-Add four messages:
+	Add four messages:
 	+ "UNIQUE_ID_REQUEST"
 	+ "UNIQUE_ID_VALUES"
 	+ "KEYCODE_REQUEST"
@@ -10,7 +15,6 @@ Add four messages:
 	+ Fixed issues comments for "SYSTEM_STATUS" message
 
 -----------------Release date: 12/09/2013-------------------------
-
 	+ Remove message "IMU_CALIB_STATUS"
 	+ Add new message "SYSTEM_STATUS"
 	
